Change pictures to COKMC
Change pictures to use those taken by Amanda for COKMC.

--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -3579,7 +3579,34 @@
     <Content Include="Content\css\ViewCSS\index.css" />
     <Content Include="Content\img\bg\child-girl-happy.jpg" />
     <Content Include="Content\img\brandi.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-1.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-10.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-11.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-12.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-13.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-14.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-15.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-16.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-17.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-18.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-19.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-2.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-20.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-21.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-22.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-3.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-4.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-5.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-6.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-7.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-8.jpg" />
+    <Content Include="Content\img\ClotheOurKids\COKTrailer-9.jpg" />
+    <Content Include="Content\img\ClotheOurKids\Love_Shirt.jpg" />
+    <Content Include="Content\img\ClotheOurKids\You_Are_Loved_Concrete.jpg" />
     <Content Include="Content\img\coat.jpg" />
+    <Content Include="Content\img\downloaded\firefighters.jpeg" />
+    <Content Include="Content\img\downloaded\looking_for_a_friend.jpeg" />
+    <Content Include="Content\img\downloaded\Need_A_Miracle.jpg" />
     <Content Include="Content\img\jeans.jpeg" />
     <Content Include="Content\img\lightbox\default-skin.png" />
     <Content Include="Content\img\lightbox\default-skin.svg" />
