--- a/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
+++ b/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
@@ -10,8 +10,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=Michael-PC\SQLEXPRESS;Initial Catalog=ClotheOurKids;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ClotheOurKidsEntities" connectionString="metadata=res://*/Models.DB.ClotheOurKidsModel.csdl|res://*/Models.DB.ClotheOurKidsModel.ssdl|res://*/Models.DB.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Michael-PC\SQLEXPRESS;initial catalog=ClotheOurKids;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IdentityDbContext" connectionString="Data Source=DESKTOP-6VL0k01\DEVSQLEXPRESS;Initial Catalog=ClotheOurKids;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClotheOurKidsContext" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VL0k01\DEVSQLEXPRESS;initial catalog=ClotheOurKids;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
