--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -229,9 +229,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\ViewModel\IRequestFormRepository.cs" />
-    <Compile Include="Models\ViewModel\RequestFormModel.cs" />
-    <Compile Include="Models\ViewModel\RequestFormRepository.cs" />
+    <Compile Include="Models\ViewModel\RequestFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
