Update to Route Login Correctly
Update to Route Login Correctly. Need to add button to Confirm email page to Re-send confirmation email

--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -561,6 +561,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Scripts\ViewScripts\Layout.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
