Resend Email Confirmation and Gmail Config
Resend Email Confirmation and Gmail Config.

--- a/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
+++ b/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
@@ -19,12 +19,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="StripeApiKey" value="sk_test_Y690K1Ru6dirDUs4V2BYrq1M" />
-    <!--<add key="GmailUserName" value="No-Reply@givekidsclothes.com"/>
-    <add key="GmailPassword" value="dttabxrkfgylqdlq"/>-->
+    <!--<add key="GmailUserName" value="No-Reply@givekidsclothes.com"/>-->
+    <add key="GmailPassword" value="dttabxrkfgylqdlq"/>
     <add key="GmailUserName" value="givekidsclothes@gmail.com"/>
-    <add key="GmailPassword" value="lovemrb1!"/>
+    <!--<add key="GmailPassword" value="lovemrb1!"/>-->
     <add key="GmailHost" value="smtp.gmail.com"/>
-    <add key="GmailPort" value="465"/>
+    <!--<add key="GmailPort" value="465"/>-->
+    <add key="GmailPort" value="587"/>
     <add key="GmailSsl" value="true"/>
   </appSettings>
   <system.web>
