--- a/ClotheOurKids.Web/Web.Work.config
+++ b/ClotheOurKids.Web/Web.Work.config
@@ -17,13 +17,11 @@
 
   <connectionStrings>
     <add name="IdentityDbContext"
-         connectionString=""
-         providerName="System.Data.SqlClient"
+         connectionString="Data Source=ITL-ATA05;Initial Catalog=dbVelocity_ITL;Integrated Security=True"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
 
-    <add name="ClotheOurKidsContext"
-         connectionString=""
-         providerName="System.Data.SqlClient"
+    <add name="ClotheOurKidsEntities"
+         connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ITL-ATA05;initial catalog=dbVelocity_ITL;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   
