--- a/ClotheOurKids.Web/Web.config
+++ b/ClotheOurKids.Web/Web.config
@@ -24,6 +24,8 @@
     <add key="GmailHost" value="smtp.gmail.com"/>
     <add key="GmailPort" value="587"/>
     <add key="GmailSsl" value="true"/>
+    <add key="available.offline" value="true"/>
+    <add key="available.message" value=""/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
