--- a/ClotheOurKids.Web/Web.config
+++ b/ClotheOurKids.Web/Web.config
@@ -9,21 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings>
-    <add name="IdentityDbContext" connectionString="Data Source=DESKTOP-6VL0k01\DEVSQLEXPRESS;Initial Catalog=ClotheOurKids;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ClotheOurKidsEntities" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VL0k01\DEVSQLEXPRESS;initial catalog=ClotheOurKids;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings configSource="ConnectionStrings.config">    
   </connectionStrings>
-  <appSettings>
+  <appSettings file="..\..\..\ClotheOurKids_AppSettingsSecrets.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="StripeApiKey" value="sk_test_Y690K1Ru6dirDUs4V2BYrq1M" />    
-    <add key="GmailUserName" value="givekidsclothes@gmail.com"/>
-    <add key="GmailPassword" value="dttabxrkfgylqdlq"/>
-    <add key="GmailHost" value="smtp.gmail.com"/>
-    <add key="GmailPort" value="587"/>
-    <add key="GmailSsl" value="true"/>
     <add key="available.offline" value="true"/>
     <add key="available.message" value=""/>
   </appSettings>
@@ -42,6 +34,20 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404"/>
+      <remove statusCode="503"/>
+      <error
+        statusCode="404"
+        path="/404.html"
+        responseMode="ExecuteURL"
+        />
+      <error
+        statusCode="503"
+        path="/503.html"
+        responseMode="ExecuteURL"
+        />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
