--- a/ClotheOurKids.Web/Web.Release.config
+++ b/ClotheOurKids.Web/Web.Release.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings configSource="ConnectionStrings_Release.config" xdt:Transform="Replace">
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
