Setup Coming Soon Page and Web Deploy
Setup Coming Soon Page and Web Deploy

--- a/ClotheOurKids.Web/Web.config
+++ b/ClotheOurKids.Web/Web.config
@@ -16,13 +16,17 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="available.offline" value="true"/>
-    <add key="available.message" value=""/>
+    <add key="available.offline" value="true" />
+    <add key="available.message" value="" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <!--<customErrors mode="On" redirectMode="ResponseRewrite">
+      <error statusCode="404" redirect="~/CustomErrors/404.html"/>
+      <error statusCode="503" redirect="~/CustomErrors/503.html"/>
+    </customErrors>-->
   </system.web>
   <system.webServer>
     <modules>
@@ -34,20 +38,17 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <httpErrors errorMode="Custom" existingResponse="Replace">
-      <remove statusCode="404"/>
-      <remove statusCode="503"/>
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
       <error
         statusCode="404"
-        path="/404.html"
-        responseMode="ExecuteURL"
-        />
+        path="/CustomErrors/404.html"
+        responseMode="ExecuteURL"/>
       <error
         statusCode="503"
-        path="/503.html"
-        responseMode="ExecuteURL"
-        />
-    </httpErrors>
+        path="/CustomErrors/503.html"
+        responseMode="ExecuteURL"/>
+    </httpErrors>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
