--- a/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
+++ b/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
@@ -11,12 +11,12 @@
   </configSections>
   <connectionStrings configSource="ConnectionStrings.config">    
   </connectionStrings>
-  <appSettings file="..\..\..\ClotheOurKids_AppSettingsSecrets.config">
+  <appSettings file="..\ClotheOurKids_AppSettingsSecrets.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="available.offline" value="true" />
+    <add key="available.offline" value="false" />
     <add key="available.message" value="" />
   </appSettings>
   <system.web>
