--- a/ClotheOurKids.Web/packages.config
+++ b/ClotheOurKids.Web/packages.config
@@ -35,6 +35,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Postal.Mvc5" version="1.2.0" targetFramework="net452" />
+  <package id="RazorEngine" version="3.4.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="Stripe.net" version="7.6.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
